--- a/templates/main_app/main1.html
+++ b/templates/main_app/main1.html
@@ -4,7 +4,7 @@
 
 <section class="section" id="section--0" style="background-image: url(http://sawitsecure.mpob.gov.my/wp-content/uploads/2021/08/bg4-scaled.jpg);background-position: top center; background-repeat: no-repeat; background-size: cover;">
   <div class="section__title" style="border-radius: 25px; padding: 40px; background-color: rgba(0,0,0,.4);">
-    <h3 class="section__header" style="color: white; font-size: 60px;">Welcome to the TechPalmtreedoctor</h3>
+    <h3 class="section__header" style="color: white; font-size: 60px;">Welcome to the PalmTreeAIDoctor</h3>
     <h2 class="section__description" style="color: white;">Detection of Palm Oil Leaf Disease with Deep Learning</h2>
   </div>
 </section>
@@ -37,7 +37,7 @@
             <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
           </div>
         </div>
-        <input class="btn btn--submit button_slide2 slide_left2" type="submit" value="Predict" style="background-color: #066a2d; color: white;"></div>
+        <input class="btn btn--submit button_slide2 slide_left2" type="submit" value="Predict" style="background-color: #4bbb7d; color: white;"></div>
       </div>
 
     </form>
