--- a/templates/main_app/base.html
+++ b/templates/main_app/base.html
@@ -12,9 +12,17 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "css/fypstyle.css" %}" />
-    <title>TechPalmtreedoctor</title>
+    <title>PalmTreeAIDoctor</title>
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script defer src="{% static "js/fypscript.js" %}"></script>
+    <style>
+      .button_slide2 {
+        box-shadow: inset 0 0 0 0 #ffb003;
+      }
+      .slide_left2:hover {
+        box-shadow: inset 0 0 0 50px #ffb003;
+      }
+    </style>
   </head>
   <body style="background-image: linear-gradient(180deg, #EBFFFD 50%, #FFFFFF 70%);">
     <nav class="nav">
